<?xml version="1.0"?>
<package format="3">
  <name>robolaunch_cloudy_mqtt</name>
  <version>0.0.0</version>
  <description>MQTT-based IoT application for robolaunch_cloudy robot</description>
  <maintainer email="developer@example.com">developer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>paho-mqtt</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>